<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">huihua</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="color">选择颜色</string>
	<string name="color_red">红色</string>
	<string name="color_green">绿色</string>
	<string name="color_blue">蓝色</string>
	<string name="graph">选择图形</string>
	<string name="graph_line">线段</string>
	<string name="graph_cricle">圆形</string>
	<string name="width">画笔宽度</string>
	<string name="width_1">5像素</string>
	<string name="width_2">10像素</string>
	<string name="width_3">20像素</string>
	<string name="clear">橡皮擦</string>
    <string name="cehxiao">撤销</string>
    <string name="huifu">恢复</string>
    <string name="qingping">清屏</string>
    <string name="save">保存</string>

    

</resources>
